# TODO

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
apps/core/: admin.py  apps.py  urls.py
apps/core/models/: todo.py
apps/core/serializers/: register.py  todo.py  user.py
apps/core/views/: logout.py  register.py  reset_pass.py  views.py
config/: settings.py  urls.py
todoapp/: urls.py
todoapp/migrations/: 0001_initial.py
todoapp/models/: todo.py
todoapp/serializers/: register.py  todo.py  user.py
todoapp/views/: views.py
